--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ dist: xenial
 
 python:
     - 3.6
+    - 3.7
+    - 3.7-dev
+    - 3.8-dev
 
 before_install:
     - python -m pip install --upgrade pip
@@ -11,7 +14,7 @@ before_install:
 install:
     - pip install -r scripts/requirements.txt
     - pip install -r tests/requirements.txt
-    - pip install .
+    - python setup.py install
 
 script:
     - pytest --cov=./
