--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,22 @@ dist: xenial
 python:
     - 3.6
     - 3.7
-    - 3.7-dev
     
 before_install:
-    - python -m pip install --upgrade pip
-    - pip install setuptools
+    - sudo apt-get update
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - conda config --env --set always_yes yes --set changeps1 no 
+    - conda config --env --append channels conda-forge --append channels rdkit --append channels ambermd
+    - conda update -q conda
+    - conda info -a
 
 install:
-    - pip install -r scripts/requirements.txt
-    - pip install -r tests/requirements.txt
+    - conda create -q -n test python=$TRAVIS_PYTHON_VERSION
+    - source activate test
+    - conda install --yes --file scripts/requirements.txt
+    - conda install --yes --file tests/requirements.txt
     - python setup.py install
 
 script:
